# t-bench

./: .gitignore  LICENSE  README.md  devenv.nix  devenv.yaml  flake.nix  pyproject.toml
examples/: compare_two_spheres.py  sweep_with_refidxdb.py
scripts/: streamlit_app.py
src/tbench/: __init__.py  geometry.py  incidence.py  runner.py  schema.py  sweep.py
src/tbench/adapters/: __init__.py  base.py  fastmm2_cli.py  fastmm2_python.py  mstm_cli.py  mstm_python.py
tests/: conftest.py  test_adapters.py  test_schema.py  test_sweep.py
